force-app/main/default/objects/maps__ArcGISBatchPushSetting__c/maps__ArcGISBatchPushSetting__c.object-meta.xml
<CustomObject>
    <label>Maps ArcGIS Batch Push Setting</label>
    <nameField>
        <label>Maps ArcGIS Batch Push Setting Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps ArcGIS Batch Push Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>