force-app/main/default/objects/maps__ArcGISBatchPushSetting__c/fields/maps__EnableLog__c.field-meta.xml
<CustomField>
    <fullName>maps__EnableLog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnableLog</label>
    <type>Checkbox</type>
</CustomField>