force-app/main/default/objects/maps__ArcGISBatchPushSetting__c/fields/maps__FeatureLayerURL__c.field-meta.xml
<CustomField>
    <fullName>maps__FeatureLayerURL__c</fullName>
    <label>FeatureLayerURL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>