force-app/main/default/objects/maps__ArcGISBatchPushSetting__c/fields/maps__KeyId__c.field-meta.xml
<CustomField>
    <fullName>maps__KeyId__c</fullName>
    <label>KeyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>