force-app/main/default/objects/maps__ArcGISBatchPushSetting__c/fields/maps__LastPushedFieldName__c.field-meta.xml
<CustomField>
    <fullName>maps__LastPushedFieldName__c</fullName>
    <label>LastPushedFieldName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>