force-app/main/default/objects/maps__ArcGISBatchPushSetting__c/fields/maps__Token2__c.field-meta.xml
<CustomField>
    <fullName>maps__Token2__c</fullName>
    <label>Token</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>