force-app/main/default/objects/maps__ArcGISBatchPushSetting__c/fields/maps__Token__c.field-meta.xml
<CustomField>
    <fullName>maps__Token__c</fullName>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>